Bug fix: Z-index s nav overlay

--- a/components/AboutSection/_aboutSection.scss
+++ b/components/AboutSection/_aboutSection.scss
@@ -18,7 +18,7 @@
           color: $mainColor;
           text-align: center;
           position: relative;
-          z-index: 10;
+          z-index: 2;
           min-width: 300px;
           padding: 0 2rem;
           background-color: white;
