--- a/components/Header/_header.scss
+++ b/components/Header/_header.scss
@@ -1,149 +1,140 @@
-.main-header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: relative;
+.main-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+  color: white;
+  padding: 1rem 2rem;
+  z-index: 4;
+
+  &.white {
+    background-color: white;
+    color: black;
+
+    .brand h2 {
+      color: black;
+    }
+
+    .navbar li a {
+      color: black;
+    }
+  }
+
+  &.gradient {
+    @include gradientBg;
     color: white;
-    padding: 1rem 2rem;
-    z-index: 2;
 
-    &.white{
-        background-color: white;
-        color: black;
-
-        .brand h2{
-            color: black;
-        }
-
-        .navbar li a{
-            color: black
-        }
+    .brand h2 {
+      color: white;
     }
 
-    &.gradient{
-        @include gradientBg;
-        color: white;
+    .navbar a {
+      color: white;
+    }
+  }
 
-        .brand h2{
-            color: white;
-        }
+  .brand {
+    display: flex;
+    align-items: center;
+    h2 {
+      cursor: pointer;
+    }
+    .brand-logo {
+      display: flex;
+      align-items: center;
+      margin-right: 1rem;
 
-        .navbar a{
-            color: white;
-        }
+      img {
+        width: 40px;
+        height: 40px;
+      }
+    }
+  }
+
+  .hamburger {
+    display: none;
+  }
+
+  .navbar {
+    position: relative;
+    display: flex;
+    align-items: center;
+    .navbar-login,
+    .navbar-register {
+      margin-left: 1rem;
+    }
+  }
+
+  .navbar-logged {
+    position: relative;
+    .navbar-profile {
+      width: 40px;
+      height: 40px;
+      background-color: $darkWhite;
+      border-radius: 50%;
+      margin-left: 2rem;
+      object-fit: cover;
+      cursor: pointer;
+    }
+    .navbar-name {
+      margin-left: 0.75rem;
+      font-size: 14px;
+      cursor: pointer;
     }
 
-    .brand{
-        display: flex;
-        align-items: center;
-        h2{
-            cursor: pointer;
-        }
-        .brand-logo{
-            display: flex;
-            align-items: center;
-            margin-right: 1rem;
-            
-            
-            img{
-                width: 40px;
-                height: 40px;
-            }
-        }
-        
+    .navbar-notifications {
+      font-size: 1.25rem;
+      cursor: pointer;
     }
 
-    .hamburger{
+    .navbar-dropdown-icon {
+      cursor: pointer;
+      margin-left: 2rem;
+    }
+  }
+}
+
+.main-header {
+  .navbar-logged {
+    .notifications-dropdown {
+      .dropdown-notification {
+        .notification-message {
+          white-space: nowrap;
+          max-width: 100%;
+          overflow-x: hidden;
+        }
+      }
+    }
+  }
+}
+
+//Media
+
+@media screen and (max-width: 420px) {
+  .main-header {
+    width: 100%;
+    justify-content: space-between;
+    .hamburger {
+      display: block;
+    }
+    .navbar {
+      .navbar-profile {
         display: none;
-    }
-
-    .navbar{
-        position: relative;
-        display: flex;
-        align-items: center;
-        .navbar-login, .navbar-register{
-            margin-left: 1rem;
-        }
-    }
-
-    .navbar-logged{
-        position: relative;
-        .navbar-profile{
-            width: 40px;
-            height: 40px;
-            background-color: $darkWhite;
-            border-radius: 50%;
-            margin-left: 2rem;
-            object-fit: cover;
-            cursor: pointer;
-        }
-        .navbar-name{
-            margin-left: 0.75rem;
-            font-size: 14px;
-            cursor: pointer;
-        }
-
-        .navbar-notifications{
-            font-size: 1.25rem;
-            cursor: pointer;
-            
-        }
-
-        .navbar-dropdown-icon{
-            cursor: pointer;
-            margin-left: 2rem;
-        }
-
-        
-    }
-
-    
-
-}
-
-.main-header{
-    .navbar-logged{
-
-  
-        .notifications-dropdown{
-            .dropdown-notification{
-                .notification-message{
-                    white-space: nowrap;
-                    max-width: 100%;
-                    overflow-x:hidden;
-                }
-            }
-        }
-    }
-}
-
-//Media 
-
-@media screen and (max-width: 420px){
-    .main-header{
+      }
+      .navbar-name {
+        display: none;
+      }
+      .navbar-dropdown-icon {
+        display: none;
+      }
+      .navbar-login {
+        display: none;
+      }
+      .dropdown {
         width: 100%;
-        justify-content: space-between;
-        .hamburger{
-            display: block;
-        }
-        .navbar{
-            .navbar-profile{
-                display: none;
-            }
-            .navbar-name{
-                display: none;
-            }
-            .navbar-dropdown-icon{
-                display: none;
-            }
-            .navbar-login{
-                display: none;
-            }
-            .dropdown{
-                width: 100%;
-                position: absolute;
-                right: 0;
-            }
-        }
+        position: absolute;
+        right: 0;
+      }
     }
+  }
 }
